charts/yaml-manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp26-api
  namespace: nagp26
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nagp26-api
  template:
    metadata:
      labels:
        app: nagp26-api
    spec:
      containers:
        - name: nagp26-api
          image: aadil77/nagp26-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
