charts/yaml-manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp26-api
  namespace: nagp26
spec:
  type: ClusterIP
  selector:
    app: nagp26-api
  ports:
    - port: 80
      targetPort: 8080
