charts/yaml-manifests/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp26-sql
  namespace: nagp26
spec:
  ports:
    - port: 1433
      targetPort: 1433
      protocol: TCP
      name: mssql
  selector:
    app: nagp26-sql
  type: ClusterIP
